kubernetes-manifests/warehouse/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pgadmin
  name: pgadmin
  namespace: warehouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin
    spec:
      containers:
      - image: "dpage/pgadmin4:4.17"
        name: pgadmin
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - name: pgadmin-data
          mountPath: /var/lib/pgadmin
      nodeSelector:
        "kubernetes.io/arch": "amd64"
      volumes:
      - name: pgadmin-data
        persistentVolumeClaim:
          claimName: pgadmin-data-pvc
      dnsConfig:
        options:
        - name: ndots
          value: "1"
