kubernetes-manifests/warehouse/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: pgadmin
  name: pgadmin-http
  namespace: warehouse
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: pgadmin
