kubernetes-manifests/warehouse/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: postgresql
  name: postgresql
  namespace: warehouse
spec:
  type: LoadBalancer
  ports:
  - name: pqsql
    port: 5432
    targetPort: 5432
  selector:
    app.kubernetes.io/name: postgresql
